Updating LICENSE, removing travis and other outdated tools, and adding new cool things.

--- a/AUTHORS
+++ b/AUTHORS
@@ -6,3 +6,10 @@
   
 * Gilles Aouizerate <gilles.aouizerate@gmail.com>
   Extension of COESA model up to 86km
+
+* Andrew James Doty <doty.andrewj@utexas.edu>
+  Integrating Raymer Aircraft Design Equations, Spacecraft Dynamics and style guide.
+
+* Dennis Hom
+
+
